# ProjectMAP

./: README.md
oraculum/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
oraculum/app/: faiss_db.py  file_md.py  main.py  utils.py
oraculum/app/views/: chat_page.py  faiss_page.py  qa_page.py  upload_page.py
oraculum/data/faiss_index/: index.faiss  index.pkl
oraculum/data/md/: Catedral de Brasília.md  Centro Cultural Banco do Brasil (CCBB Brasília).md  Congresso Nacional.md  Ermida Dom Bosco.md  Espaço Lúcio Costa e Panteão da Pátria.md  EstadioPDF.md  Guia de Parques do Distrito Federal.md  Guia-Roteiros-Brasilia-Portugues_.md  Jardim Botânico de Brasília.md  Lago Paranoá.md  Memorial JK.md  Museu Nacional da República.md  Palácio da Alvorada.md  Parque Nacional de Brasília (Água Mineral).md  Parque da Cidade Sarah Kubitschek.md  Planetário de Brasília.md  Ponte JK (Juscelino Kubitschek).md  Pontão do Lago Sul.md  Praça dos Três Poderes.md  Santuário Dom Bosco.md  Templo da Boa Vontade (TBV).md  Torre de TV Brasília.md  Torre de TV e Feira da Torre.md  Zoológico de Brasília.md
